<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.password.PasswordFragment">

    <!--Ellipses-->
    <ImageView
        android:id="@+id/yellowEllipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yellow_ellipse"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/top_yellow_ellipse"/>

    <ImageView
        android:id="@+id/greenEllipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/green_ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/middle_green_ellipse"/>

    <ImageView
        android:id="@+id/redEllipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/red_ellipse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/red_bottom_ellipse"/>

    <TextView
        android:id="@+id/securityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_screen"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"/>


    <TextView
        android:id="@+id/enterPasscode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_passcode"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/yellowEllipse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/dotsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/enterPasscode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/small_circle"
            android:contentDescription="@string/first_dot_of_password_block"/>

        <ImageView
            android:id="@+id/dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/small_circle"
            android:contentDescription="@string/second_dot_of_password_block" />

        <ImageView
            android:id="@+id/dot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/small_circle"
            android:contentDescription="@string/third_dot_of_password_block"/>

        <ImageView
            android:id="@+id/dot4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/small_circle"
            android:contentDescription="@string/fourth_dot_of_password_block"/>

    </LinearLayout>

    <!-- Pin Grid -->
    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/numpad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:rowCount="4"
        app:layout_constraintTop_toBottomOf="@id/dotsContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/btn1"
            android:background="@drawable/one"
            android:layout_margin="12dp"
            android:contentDescription="@string/number_1_from_password_keyboard"/>


        <ImageView
            android:id="@+id/btn2"
            android:background="@drawable/two"
            android:layout_margin="12dp"
            android:contentDescription="@string/number_2_from_password_keyboard"/>

        <ImageView
            android:id="@+id/btn3"
            android:background="@drawable/three"
            android:layout_margin="12dp"
            android:contentDescription="@string/number_3_from_password_keyboard"/>

        <ImageView
            android:id="@+id/btn4"
            android:background="@drawable/four"
            android:layout_margin="12dp"
            android:contentDescription="@string/number_4_from_password_keyboard"/>

        <ImageView
            android:id="@+id/btn5"
            android:background="@drawable/five"
            android:layout_margin="12dp"
            android:contentDescription="@string/number_5_from_password_keyboard"/>

        <ImageView
            android:id="@+id/btn6"
            android:background="@drawable/six"
            android:layout_margin="12dp"
            android:contentDescription="@string/number_6_from_password_keyboard"/>

        <ImageView
            android:id="@+id/btn7"
            android:background="@drawable/seven"
            android:layout_margin="12dp"
            android:contentDescription="@string/number_7_from_password_keyboard"/>

        <ImageView
            android:id="@+id/btn8"
            android:background="@drawable/eight"
            android:layout_margin="12dp"
            android:contentDescription="@string/number_8_from_password_keyboard"/>

        <ImageView
            android:id="@+id/btn9"
            android:background="@drawable/nine"
            android:layout_margin="12dp"
            android:contentDescription="@string/number_9_from_password_keyboard"/>

        <ImageView
            android:id="@+id/btnFingerprint"
            android:background="@drawable/touch_id"
            android:layout_margin="12dp"
            android:contentDescription="@string/figerprint_id_from_password_keyboard"/>

        <ImageView
            android:id="@+id/btn0"
            android:background="@drawable/zero"
            android:layout_margin="12dp"
            android:contentDescription="@string/number_0_from_password_keyboard"/>

        <ImageView
            android:id="@+id/btnBackspace"
            android:background="@drawable/backspace"
            android:layout_margin="12dp"
            android:contentDescription="@string/backspace_button_from_password_keyboard"/>

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/numpad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
